Fix contrast errors at dark theme

--- a/src/styles/config/_dark-colors.scss
+++ b/src/styles/config/_dark-colors.scss
@@ -26,7 +26,7 @@ $colors: (
     mark-background: hsl(50 100% 80%),
     mark-foreground: $color-black,
     marker: $color-primary,
-    code-background: hsl(207 64% 21%),
+    code-background: hsl(207 64% 18%),
     code-foreground: $color-white,
     blockquote-border: $color-primary,
     footer-background: hsl(0 0% 0% / 0.15)
@@ -88,7 +88,7 @@ $colors: (
   prism: (
     color: hsl(217 34% 88%),
     background: hsl(207 83% 10%),
-    comment: hsl(180 9% 43%),
+    comment: hsl(180 9% 55%),
     punctuation: hsl(276 68% 75%),
     namespace: hsl(197 31% 77%),
     deleted: hsl(1 83% 63% / 0.56),
